// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "default": Object {
    "images": Array [
      Object {
        "height": 100,
        "path": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "srcSet": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "toString": [Function],
  },
}
`;

exports[`jpg to webp 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/8f768bbd1ef04c7039e6924403703a0f-750.webp",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/6b3bdb311d06c205f104164226695cbf-1000.webp",
        "width": 1000,
      },
    ],
    "src": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp",
    "srcSet": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp 500w,foobar/8f768bbd1ef04c7039e6924403703a0f-750.webp 750w,foobar/6b3bdb311d06c205f104164226695cbf-1000.webp 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`multiple sizes 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/img/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/img/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/img/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,foobar/img/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/test/71c27f2d922cdf179a4982c4143d23f0-750x675.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/test/1e07c81d23028bb7eeed24cbdfb20f5c-1000x900.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg",
    "srcSet": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg 500w,foobar/test/71c27f2d922cdf179a4982c4143d23f0-750x675.jpg 750w,foobar/test/1e07c81d23028bb7eeed24cbdfb20f5c-1000x900.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`override min and max with size 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
    "srcSet": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg 100w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/cb279ae3edb2c00c909301c554ec09e9-200.jpg",
        "width": 200,
      },
    ],
    "src": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg",
    "srcSet": "foobar/92b36e2ee9488a2fd3f155a63713d5aa-100.jpg 100w,foobar/cb279ae3edb2c00c909301c554ec09e9-200.jpg 200w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`parses json notation 1`] = `
Object {
  "default": Object {
    "height": 45,
    "images": Array [
      Object {
        "height": 45,
        "path": "foobar/b67b9358907c5be0da0fb4b83636b2ea-50.webp",
        "width": 50,
      },
      Object {
        "height": 90,
        "path": "foobar/54bf3fc41335b948fdcae9a24a325d98-100.webp",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/cc49e04256692ae889b7b66e14bfe295-200.webp",
        "width": 200,
      },
    ],
    "src": "foobar/b67b9358907c5be0da0fb4b83636b2ea-50.webp",
    "srcSet": "foobar/b67b9358907c5be0da0fb4b83636b2ea-50.webp 50w,foobar/54bf3fc41335b948fdcae9a24a325d98-100.webp 100w,foobar/cc49e04256692ae889b7b66e14bfe295-200.webp 200w",
    "toString": [Function],
    "width": 50,
  },
}
`;

exports[`png 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/0371c70a0f39b412d9e042cccfee5303-500.png",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/4537f77756262d8a3e0201ddadedeebe-513.png",
        "width": 513,
      },
    ],
    "src": "foobar/0371c70a0f39b412d9e042cccfee5303-500.png",
    "srcSet": "foobar/0371c70a0f39b412d9e042cccfee5303-500.png 500w,foobar/4537f77756262d8a3e0201ddadedeebe-513.png 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to avif 1`] = `
Object {
  "default": Object {
    "height": 595,
    "images": Array [
      Object {
        "height": 595,
        "path": "foobar/2dd56762ba549a1d513c236b0a3435a6-513.avif",
        "width": 513,
      },
    ],
    "src": "foobar/2dd56762ba549a1d513c236b0a3435a6-513.avif",
    "srcSet": "foobar/2dd56762ba549a1d513c236b0a3435a6-513.avif 513w",
    "toString": [Function],
    "width": 513,
  },
}
`;

exports[`png to avif 2`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/38a6d99027dbc677773a00929d989048-500.avif",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/5c529246a1a1bf2de0a188d3c36697c6-750.avif",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/0dd6b3f08687c424d0c4706f386f62b7-1000.avif",
        "width": 1000,
      },
    ],
    "src": "foobar/38a6d99027dbc677773a00929d989048-500.avif",
    "srcSet": "foobar/38a6d99027dbc677773a00929d989048-500.avif 500w,foobar/5c529246a1a1bf2de0a188d3c36697c6-750.avif 750w,foobar/0dd6b3f08687c424d0c4706f386f62b7-1000.avif 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/4fa0a7b659e336eb5a9428e6b1877d4b-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/a9490550db146ab84781bb723bbba222-513.jpg",
        "width": 513,
      },
    ],
    "src": "foobar/4fa0a7b659e336eb5a9428e6b1877d4b-500.jpg",
    "srcSet": "foobar/4fa0a7b659e336eb5a9428e6b1877d4b-500.jpg 500w,foobar/a9490550db146ab84781bb723bbba222-513.jpg 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to webp with transparent background 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/79eba140013302df0a98f2a348068b65-500.webp",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/4f7c799981494fbaec5b08239740740b-513.webp",
        "width": 513,
      },
    ],
    "src": "foobar/79eba140013302df0a98f2a348068b65-500.webp",
    "srcSet": "foobar/79eba140013302df0a98f2a348068b65-500.webp 500w,foobar/4f7c799981494fbaec5b08239740740b-513.webp 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`preserves rotation 1`] = `
Object {
  "default": Object {
    "height": 554,
    "images": Array [
      Object {
        "height": 554,
        "path": "foobar/d126a01e5ffd8d56896e27f44e54fb0f-499.jpg",
        "width": 499,
      },
    ],
    "src": "foobar/d126a01e5ffd8d56896e27f44e54fb0f-499.jpg",
    "srcSet": "foobar/d126a01e5ffd8d56896e27f44e54fb0f-499.jpg 499w",
    "toString": [Function],
    "width": 499,
  },
}
`;

exports[`progressive image 1`] = `
Object {
  "default": Object {
    "height": 684,
    "images": Array [
      Object {
        "height": 684,
        "path": "foobar/46facc9878ec79616a2e7cc07b9f99db-760.jpg",
        "width": 760,
      },
      Object {
        "height": 864,
        "path": "foobar/7570c61c7410715457ef385c68ebabc8-960.jpg",
        "width": 960,
      },
    ],
    "src": "foobar/46facc9878ec79616a2e7cc07b9f99db-760.jpg",
    "srcSet": "foobar/46facc9878ec79616a2e7cc07b9f99db-760.jpg 760w,foobar/7570c61c7410715457ef385c68ebabc8-960.jpg 960w",
    "toString": [Function],
    "width": 760,
  },
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "public/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "public/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,public/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,public/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`rotates 90 1`] = `
Object {
  "default": Object {
    "height": 666,
    "images": Array [
      Object {
        "height": 666,
        "path": "foobar/9a4fd129c92006a1eec5fd8014ba6289-599.jpg",
        "width": 599,
      },
    ],
    "src": "foobar/9a4fd129c92006a1eec5fd8014ba6289-599.jpg",
    "srcSet": "foobar/9a4fd129c92006a1eec5fd8014ba6289-599.jpg 599w",
    "toString": [Function],
    "width": 599,
  },
}
`;

exports[`single size 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with placeholder image 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgICAwAAAAAAAAAAAAAAAAcDBgEIAgQF/8QALRAAAQMDAgUEAQQDAAAAAAAAAQIDBAAFEQYhBxIxQVEIEyJhIxQycYFSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAAAAQMCBP/EABwRAAMAAwADAAAAAAAAAAAAAAABAgMRMQQSIv/aAAwDAQACEQMRAD8A8q+enVqRPaFouMS3wyr8p9pZcQnwkZwo/Zxiukv0zvJujDjeqmnYYUS6l2GQ5jsBhWD95xWyTzrEaO7JfcbaYZSVuOK2SlIGSSe2KUWp/ULoy1yVMWuLMvRTsXWiGWifpStz/OK6HMrpNNlYvnpns8lort1+kxJG+5YSps/ynIx/RqrSfTlq2zyIk6z3a33N1pWXWlgsH/UnIO3nFNLQnHvTWoryxa51tk2d6SrkadceS40VdgSACnPkjFNZmbAkEexMivcx5RyPIVk+Nj1pOIpGpqpe0JTRvByQuS1N1a4wW0Hm/RMK5goj/NfcfQ6+aKeBQCMb/wB0VmMGOFpIrl8rLke6YlNVcPNfXWyyhqziM4/AjsLWttH421cqSfngJBG3U5rWn9H7istLQ62ADlHyyOm/it9pVviS4jsaWwl9p9JQ6y58kLB7EdDmqBfOEsWVq2BqG1pgwFRlJDjIjAtOJT+0hKcYUP8AnTxSqN8JKhC8NOGl6vjs18KTAftryUe3IBSrmKebpjbYim1wl4ZTNOa2j3tx9gMoQpcsc/NzvkKACRgfEZBye+avF9tN6WFISEKMr4uSW2/ycwHxJIOR4yelT8LLbf2NOqb1E648+mU57T6wAp1vIwSB074pKPoPZ6LgCle42HcUVgsFOSDtRVzBKlI5icnauK9jkE0UUPgGGVFQUVb1KrZAHmiihAA3GT1PWiiimB//2Q==",
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/71c27f2d922cdf179a4982c4143d23f0-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;
